cmake_minimum_required(VERSION 3.14)
project(push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft/incs)

add_executable(push_swap
        libft/incs/ft_printf.h
        libft/incs/get_next_line.h
        libft/incs/libft.h
        libft/srcs/bin_to_int.c
        libft/srcs/bonuses_1.c
        libft/srcs/csp_module.c
        libft/srcs/dnum_utilities.c
        libft/srcs/expand_argument.c
        libft/srcs/float_module.c
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_itoa_base.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstfree.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstlen.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_lstpushback.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_nblen.c
        libft/srcs/ft_pow.c
        libft/srcs/ft_printf.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_realloc.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strjoin_free.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strndup.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnlen.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strrev.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/ft_vec_add.c
        libft/srcs/ft_vec_del.c
        libft/srcs/ft_vec_init.c
        libft/srcs/ft_vec_resize.c
        libft/srcs/get_next_line.c
        libft/srcs/num_utilities.c
        libft/srcs/place_num.c
        libft/srcs/process_utilities.c
        libft/srcs/processings.c
        srcs/apply_instruction.c
        srcs/check.c
        srcs/find_med_value.c
        srcs/graphical_utilities.c
        srcs/instructions.c
        srcs/main_checker.c
        srcs/main_push_swap.c
        srcs/ps_utilities1.c
        srcs/ps_utilities2.c
        srcs/push_swap.c
        srcs/short_cuts.c
        srcs/small_sort.c
        srcs/validation.c
        srcs/validation_utilities.c
        push_swap.h)
